--- a/themes/babelium/css/forms.css
+++ b/themes/babelium/css/forms.css
@@ -84,6 +84,9 @@ form > input[type=button].upload:hover, button.upload:hover
 	border-color: #D95700;
 }
 
+/**
+ * LOCALE BOX
+ */
 .localebox
 {
 	/* This is the container of the new select element */	
@@ -95,10 +98,11 @@ form > input[type=button].upload:hover, button.upload:hover
 
 .localebox .selectBox
 {
-	position:absolute;
-	height:100%;
-	width:100%;
+	position: absolute;
+	height: 100%;
+	width: 100%;
 	padding-left: 3px;
+	line-height: 18px;
 	
 	/* Font settings */
 	font-size:11px;
@@ -134,20 +138,21 @@ form > input[type=button].upload:hover, button.upload:hover
 .localebox .dropDown
 {
 	position:absolute;
-	top:20px;
-	left:3;
-	width:100%;
+	top: 20px;
+	left: 3px;
+	width: 100%;
 	border:1px solid #38babc;
-	list-style:none;
-	cursor:pointer;
+	list-style: none;
+	cursor: pointer;
+	line-height: 20px;
 	
-	-moz-box-sizing:border-box;
-	-webkit-box-sizing:border-box;
-	box-sizing:border-box;
+	-moz-box-sizing: border-box;
+	-webkit-box-sizing: border-box;
+	box-sizing: border-box;
 	
-	-moz-box-shadow:0 0 4px #111;
-	-webkit-box-shadow:0 0 4px #111;
-	box-shadow:0 0 4px #111;
+	-moz-box-shadow: 0 0 4px #111;
+	-webkit-box-shadow: 0 0 4px #111;
+	box-shadow: 0 0 4px #111;
 	
 	background-color: white;
 	
