--- a/themes/babelium/css/layout.css
+++ b/themes/babelium/css/layout.css
@@ -4,34 +4,24 @@
 
 /* TOP NAVIGATION */
 
-nav#topnav
+html, body
 {
 	width: 100%;
+}
+
+nav#topnav
+{
 	height: 35px;
 }
 
 	nav#topnav > ul > li
 	{
-		line-height: 17px;	
 		margin-left: 8px;
 		margin-right: 8px;
-		float: left;
-		top: 50%;
-		margin-top: 8px;	
 	}
 
-		nav#topnav > ul > li:first-child {margin-left: 16px;}
-		nav#topnav > ul > li:last-child {margin-right: 16px;}
-
-.fright
-{
-	float: right;
-}
-
-.fleft
-{
-	float: left;
-}
+	nav#topnav > ul > li:first-child {margin-left: 16px;}
+	nav#topnav > ul > li:last-child {margin-right: 16px;}
 
 div#logo
 {
@@ -45,26 +35,20 @@ div#logo
 
 nav#mainnav
 {
-	width: 100%;
 	height: 118px;
 }
 
 	nav#mainnav > ul
 	{
-		padding-left: 174px;
 		min-width: 720px;
-		height: 100%;
-		line-height: 118px;
-		text-align: center;
 	}
 
 		nav#mainnav > ul > li
 		{
-			padding-left: 12px;
+			padding-left: 18px;
 			padding-right: 18px;
-			display: inline-block;
 			min-height: 50px;
-			min-width: 59px;
+			line-height: 50px;
 		}
 
 
@@ -73,39 +57,10 @@ nav#mainnav
 div#searchnav
 {
 	height: 35px;
-	position: relative;
-	
-	/* logo width + upload button width  */
-	padding-left: 315px;
-	padding-right: 120px;
+	/* logo width  */
+	padding-left: 200px;
+	padding-right: 10px;
 }
-
-	div#searchnav > input, div#searchnav > button
-	{
-		position: relative;
-		float: left;
-	}
-		
-	div#searchnav > .middle
-	{
-		top: 3px;
-		width: 100%;
-	}
-			
-	div#searchnav > .left
-	{
-		top: 4px;
-		width: 90px;
-		margin-left: -110px;
-	}
-		
-	div#searchnav > .right 
-	{
-		top: 4px;
-		width: 90px;
-		margin-right: -100%;
-		margin-left: 10px;
-	}
 
 /* END OF HEADER */
 
@@ -118,29 +73,23 @@ aside#motd
 
 	aside#motd > ul#motdmessages
 	{
+		width: 100%;
 		height: 150px;
-		margin: 0 auto;
 	}
 
 		aside#motd > ul#motdmessages > li
 		{
-			height: 100%;
 			display: none;
+		}
+
+		aside#motd > ul#motdmessages > li:first-child
+		{
+			display: block;
 		}
 
 			aside#motd > ul#motdmessages > li > div
 			{
 				width: 500px;
-				height: 100%;
-				
-				/** Vertical centered **/
-				-webkit-box-align: center;
-				-moz-box-align: center;
-				box-align: center;
-				
-				display: -webkit-box;
-				display: -moz-box;
-				display: box;
 			}
 
 	aside#motd > div#motdhelper, section#maincontent > header > div#hhelper
@@ -159,8 +108,8 @@ section#maincontent > header
 
 	section#maincontent > header > h1 
 	{
+		height: 50px;
 		padding-left: 20px;
-		height: 57px;
 	}
 
 /* END OF MAIN CONTENT */
