--- a/themes/babelium/css/mxml.css
+++ b/themes/babelium/css/mxml.css
@@ -1,42 +1,57 @@
-/**********************************************************
- * Bindings for flex 4.0 spark components
- * --------------------------------
- * Author: Babelium Project - www.babeliumproject.com
- * Version: Alpha
+/**
+ * Babelium Project open source collaborative second language oral practice - http://www.babeliumproject.com
+ * 
+ * Copyright (c) 2011 GHyM and by respective authors (see below).
+ * 
+ * This file is part of Babelium Project.
+ *
+ * Babelium Project is free software: you can redistribute it and/or modify
+ * it under the terms of the GNU General Public License as published by
+ * the Free Software Foundation, either version 3 of the License, or
+ * (at your option) any later version.
+ *
+ * Babelium Project is distributed in the hope that it will be useful,
+ * but WITHOUT ANY WARRANTY; without even the implied warranty of
+ * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+ * GNU General Public License for more details.
+ *
+ * You should have received a copy of the GNU General Public License
+ * along with this program.  If not, see <http://www.gnu.org/licenses/>.
+ *
  * --------------------------------
  * References:
  * - Components
  * http://help.adobe.com/en_US/FlashPlatform/reference/actionscript/3/spark/components/package-detail.html
  * - Skins
  * http://help.adobe.com/en_US/FlashPlatform/reference/actionscript/3/spark/skins/spark/package-detail.html
- *********************************************************/
-
-/**
- * Flexible Box Model
- * ---------------------
- * Group, HGroup, VGroup
- * Box, HBox, VBox
- * ---------------------
- * References: 
- * http://infrequently.org/2009/08/css-3-progress/
- * http://stackoverflow.com/questions/4465264/css3-flexible-box-model-and-nested-layouts
  **/
 
+/**
+ * Flexible Box Model
+ * ---------------------
+ * Group, HGroup, VGroup
+ * Box, HBox, VBox
+ * ---------------------
+ * References:
+ * http://infrequently.org/2009/08/css-3-progress/
+ * http://stackoverflow.com/questions/4465264/css3-flexible-box-model-and-nested-layouts
+ **/
+
 /* Box container */
-.HBox, .HGroup, .VBox, .VGroup
+.HBox, .VBox, .HBox > .HBox, .HBox > .VBox, .VBox > .HBox, .VBox > .VBox
 {
-	display: -webkit-box !important;
+	display: -webkit-box;
 	-webkit-box-align: stretch;
  
-	display: -moz-box !important;
+	display: -moz-box;
 	-moz-box-align: stretch;
  
-	display: box !important;
+	display: box;
 	box-align: stretch;
 }
 
 /* Horizontal boxes */
-.HBox, .HGroup
+.HBox
 {
 	-webkit-box-orient: horizontal;
 	-moz-box-orient: horizontal;
@@ -44,7 +59,7 @@
 }
 
 /* Vertical boxes */
-.VBox, .VGroup
+.VBox
 {
 	-webkit-box-orient: vertical;
 	-moz-box-orient: vertical;
@@ -52,7 +67,7 @@
 }
 
 /* Elements of boxes */
-.HBox > *, .HGroup > *, .VBox > *, .VGroup > *
+.HBox > *, .VBox > *
 {
 	-webkit-box-flex: 0;
 	-moz-box-flex: 0;
@@ -91,42 +106,42 @@
 }
 
 /* HBox: aligment of elements */
-.HBox.vstart, .HGroup.vstart
+.HBox.vstart
 {
 	-webkit-box-align: start;
 	-moz-box-align: start;
 	box-align: start;
 }
  
-.HBox.vend, .HGroup.vend
+.HBox.vend
 {
 	-webkit-box-align: end;
 	-moz-box-align: end;
 	box-align: end;
 }
  
-.HBox.vcenter, .HGroup.vcenter
+.HBox.vcenter
 {
 	-webkit-box-align: center;
 	-moz-box-align: center;
 	box-align: center;
 }
 
-.HBox.hstart, .HGroup.hstart
+.HBox.hstart
 {
 	-webkit-box-pack: start;
 	-moz-box-pack: start;
 	box-pack: start;
 }
 
-.HBox.hend, .HGroup.hend
+.HBox.hend
 {
 	-webkit-box-pack: end;
 	-moz-box-pack: end;
 	box-pack: end;
 }
 
-.HBox.hcenter, .HGroup.hcenter
+.HBox.hcenter
 {
 	-webkit-box-pack: center;
 	-moz-box-pack: center;
@@ -134,42 +149,42 @@
 }
 
 /* VBox: aligment of elements */
-.VBox.hstart, .VGroup.hstart
+.VBox.hstart
 {
 	-webkit-box-align: start;
 	-moz-box-align: start;
 	box-align: start;
 }
  
-.VBox.hend, .VGroup.hend
+.VBox.hend
 {
 	-webkit-box-align: end;
 	-moz-box-align: end;
 	box-align: end;
 }
  
-.VBox.hcenter, .VGroup.hcenter
+.VBox.hcenter
 {
 	-webkit-box-align: center;
 	-moz-box-align: center;
 	box-align: center;
 }
 
-.VBox.vstart, .VGroup.vstart
+.VBox.vstart
 {
 	-webkit-box-pack: start;
 	-moz-box-pack: start;
 	box-pack: start;
 }
 
-.VBox.vend, .VGroup.vend
+.VBox.vend
 {
 	-webkit-box-pack: end;
 	-moz-box-pack: end;
 	box-pack: end;
 }
 
-.VBox.vcenter, .VGroup.vcenter
+.VBox.vcenter
 {
 	-webkit-box-pack: center;
 	-moz-box-pack: center;
