--- a/util/demos/boxdemo/css/boxes.css
+++ b/util/demos/boxdemo/css/boxes.css
@@ -1,8 +1,9 @@
 /**
  * Flexible Box Model
  * ---------------------
- * Group, HGroup, VGroup
- * Box, HBox, VBox
+ * HGroup, VGroup
+ * HBox, VBox
+ * >>>> HBox, VBox
  * ---------------------
  * References: 
  * http://infrequently.org/2009/08/css-3-progress/
@@ -10,20 +11,20 @@
  **/
 
 /* Box container */
-.HBox, .HGroup, .VBox, .VGroup
+.HBox, .VBox, .HBox > .HBox, .HBox > .VBox, .VBox > .HBox, .VBox > .VBox
 {
-	display: -webkit-box !important;
+	display: -webkit-box;
 	-webkit-box-align: stretch;
  
-	display: -moz-box !important;
+	display: -moz-box;
 	-moz-box-align: stretch;
  
-	display: box !important;
+	display: box;
 	box-align: stretch;
 }
 
 /* Horizontal boxes */
-.HBox, .HGroup
+.HBox
 {
 	-webkit-box-orient: horizontal;
 	-moz-box-orient: horizontal;
@@ -31,7 +32,7 @@
 }
 
 /* Vertical boxes */
-.VBox, .VGroup
+.VBox
 {
 	-webkit-box-orient: vertical;
 	-moz-box-orient: vertical;
@@ -39,7 +40,7 @@
 }
 
 /* Elements of boxes */
-.HBox > *, .HGroup > *, .VBox > *, .VGroup > *
+.HBox > *, .VBox > *
 {
 	-webkit-box-flex: 0;
 	-moz-box-flex: 0;
@@ -78,42 +79,42 @@
 }
 
 /* HBox: aligment of elements */
-.HBox.vstart, .HGroup.vstart
+.HBox.vstart
 {
 	-webkit-box-align: start;
 	-moz-box-align: start;
 	box-align: start;
 }
  
-.HBox.vend, .HGroup.vend
+.HBox.vend
 {
 	-webkit-box-align: end;
 	-moz-box-align: end;
 	box-align: end;
 }
  
-.HBox.vcenter, .HGroup.vcenter
+.HBox.vcenter
 {
 	-webkit-box-align: center;
 	-moz-box-align: center;
 	box-align: center;
 }
 
-.HBox.hstart, .HGroup.hstart
+.HBox.hstart
 {
 	-webkit-box-pack: start;
 	-moz-box-pack: start;
 	box-pack: start;
 }
 
-.HBox.hend, .HGroup.hend
+.HBox.hend
 {
 	-webkit-box-pack: end;
 	-moz-box-pack: end;
 	box-pack: end;
 }
 
-.HBox.hcenter, .HGroup.hcenter
+.HBox.hcenter
 {
 	-webkit-box-pack: center;
 	-moz-box-pack: center;
@@ -121,42 +122,42 @@
 }
 
 /* VBox: aligment of elements */
-.VBox.hstart, .VGroup.hstart
+.VBox.hstart
 {
 	-webkit-box-align: start;
 	-moz-box-align: start;
 	box-align: start;
 }
  
-.VBox.hend, .VGroup.hend
+.VBox.hend
 {
 	-webkit-box-align: end;
 	-moz-box-align: end;
 	box-align: end;
 }
  
-.VBox.hcenter, .VGroup.hcenter
+.VBox.hcenter
 {
 	-webkit-box-align: center;
 	-moz-box-align: center;
 	box-align: center;
 }
 
-.VBox.vstart, .VGroup.vstart
+.VBox.vstart
 {
 	-webkit-box-pack: start;
 	-moz-box-pack: start;
 	box-pack: start;
 }
 
-.VBox.vend, .VGroup.vend
+.VBox.vend
 {
 	-webkit-box-pack: end;
 	-moz-box-pack: end;
 	box-pack: end;
 }
 
-.VBox.vcenter, .VGroup.vcenter
+.VBox.vcenter
 {
 	-webkit-box-pack: center;
 	-moz-box-pack: center;
