--- a/themes/babelium/css/layout.css
+++ b/themes/babelium/css/layout.css
@@ -115,10 +115,20 @@ section#maincontent > header
 		padding-left: 20px;
 	}
 
-section#maincontent > aside#loader
-{
-	width: 100px;
-	height: 20px;
-}
+	section#maincontent > aside#loader
+	{
+		position: absolute;
+		display: none;
+		width: 150px;
+		height: 30px;
+		padding-left: 10px;
+		padding-right: 10px;
+	}
+	
+		section#maincontent > aside#loader > div#loadcontext
+		{
+			width: 100%;
+			height: 100%;
+		}
 
 /* END OF MAIN CONTENT */
