--- a/themes/babelium/css/style.css
+++ b/themes/babelium/css/style.css
@@ -178,3 +178,27 @@ aside#motd
 		font-size: 24px;
 		color: #972c0a;
 	 }
+	 
+	section#maincontent > aside#loader
+	{
+		/** Default background **/
+		background-color: #FEFEFE;
+		
+		/** Gradient for mozilla and webkit powered **/
+		background: -webkit-gradient(linear, 0 0, 0 100%, from(white), to(#E2EFF3));
+		background: -moz-linear-gradient(top, white, #E2EFF3);
+		
+		/** Border bottom right roundered **/
+		-moz-border-bottom-right-radius: 6px; 
+		-webkit-border-bottom-right-radius: 6px; 
+		border-bottom-right-radius:6px;
+		
+		border-bottom: 1px solid #38babc;
+		border-right: 1px solid #38babc;
+		
+		/** Shadow **/
+		/** box shadow **/ 
+		-moz-box-shadow: 1px 1px 2px #CCC;
+		-webkit-box-shadow: 1px 1px 2px #CCC;
+		box-shadow: 1px 1px 2px #CCC;
+	}
