Subtitles are working at long last

--- a/src/BabeliaVP.mxml
+++ b/src/BabeliaVP.mxml
@@ -14,7 +14,7 @@
 	</s:layout>
 
 	<videoPlayer:VideoPlayerBabelia id="VP"
-									autoPlay="false"
+									autoPlay="true"
 									skin="white"
 									seek="true"
 									subtitles="true"
