--- a/src/BabeliaVP.mxml
+++ b/src/BabeliaVP.mxml
@@ -12,6 +12,10 @@
 	<s:layout>
 		<s:BasicLayout/>
 	</s:layout>
+	
+	<fx:Metadata>
+		[ResourceBundle("myResources")]
+	</fx:Metadata> 
 
 	<videoPlayer:VideoPlayerBabelia id="VP"
 									autoPlay="true"
@@ -25,6 +29,8 @@
 									height="{VP.width * 10 / 16}"
 									streamSource="{DataModel.getInstance().streamingResourcesPath}"
 									controlsEnabled="true"/>
+	
+	<fx:Style source="Main.css"/>
 	
 	<fx:Declarations>
 		<control:Controller/>
@@ -62,6 +68,8 @@
 				VP.addEventListener(VideoPlayerEvent.CONNECTED, onConnect);
 				VP.stopVideo();
 				VP.state=VideoPlayerBabelia.PLAY_STATE;
+				
+				Security.showSettings(SecurityPanel.PRIVACY);
 
 				//videoId=FlexGlobals.topLevelApplication.parameters.videoId;
 
