--- a/themes/babelium/css/style.css
+++ b/themes/babelium/css/style.css
@@ -28,8 +28,9 @@ a:hover
 nav#topnav
 {
 	font-family: Arial;
-	font-size: 11px;
+	font-size: 13px;
 	font-weight: bold;
+	color: #9A9A9A;
 	border-bottom: 1px solid #38babc;
 	
 	/** Default background **/
@@ -56,12 +57,12 @@ li#loginhelper
 	font-weight: bold;
 }
 
-a.yellow, a.yellow:active, a.yellow:visited
+a.yellow, a.yellow:active, a.yellow:visited, span.yellow
 {
 	color: #cc9900;
 }
 
-a.orange, a.orange:active, a.orange:visited
+a.orange, a.orange:active, a.orange:visited, span.orange
 {
 	color: #df5c02;
 }
