Made a small change to avoid crossdomain errors. Also changing the listeners to retrive the connection status of the videoplayer.

--- a/src/Main.mxml
+++ b/src/Main.mxml
@@ -81,7 +81,7 @@
 
 			private function onConnect(e:Event):void
 			{
-
+				Extern.getInstance().onConnectionReady();
 			}
 
 			private function set onUpdateVPHeight(height:int):void
