--- a/themes/babelium/css/layout.css
+++ b/themes/babelium/css/layout.css
@@ -9,6 +9,7 @@ html, body
 	width: 100%;
 	min-height: 100%;
 	height: 100%;
+	min-width: 1000px;
 }
 
 /*
@@ -129,7 +130,8 @@ aside#motd
 				width: 500px;
 			}
 
-	aside#motd > div#motdhelper, section#maincontent > header > div#hhelper
+	aside#motd > div#motdhelper, section#maincontent > header > div#hhelper,
+	footer > div.spacer > div.helper
 	{
 		height: 3px;
 	}
@@ -178,6 +180,10 @@ section#maincontent > header
 		height: 27px;
 	}
 	
+/* END OF MAIN CONTENT */
+
+/* EXERCISE LIST */
+	
 	section#maincontent > section.exerciseList
 	{
 		margin: 20px;
@@ -186,7 +192,7 @@ section#maincontent > header
 	section#maincontent > section.exerciseList > article
 	{
 		width: 49%;
-		min-width: 470px;
+		min-width: 450px;
 		min-height: 130px;
 		float: left;
 		padding-top: 15px;
@@ -200,14 +206,9 @@ section#maincontent > header
 		
 		section#maincontent > section.exerciseList > article > div
 		{
-			width: 300px;
+			width: 270px;
 			height: 100%;
 		}
-		
-			section#maincontent > section.exerciseList > article > div > *
-			{
-				width: 300px;
-			}
 		
 			section#maincontent > section.exerciseList > article > div > h1
 			{
@@ -241,4 +242,24 @@ section#maincontent > header
 					background-color: black;
 				}
 
-/* END OF MAIN CONTENT */
+/* END OF EXERCISE LIST */
+
+/* FOOTER */
+
+footer
+{
+	height: 40px;	
+}
+
+	footer > div.spacer
+	{
+		height: 30px;
+	}
+	
+	footer > div.HBox
+	{
+		width: 90%;
+		height: 40px;
+	}
+
+/* END OF FOOTER */
