--- a/themes/babelium/css/forms.css
+++ b/themes/babelium/css/forms.css
@@ -129,7 +129,8 @@ form > input[type=button].upload:hover, button.upload:hover
 }
 
 .localebox .selectBox:hover,
-.localebox .selectBox.expanded
+.localebox .selectBox.expanded,
+.localebox .dropDown li:hover
 {
 	color:#2c5667;
 	text-shadow:1px 1px 0 #9bc2d0;
@@ -145,6 +146,7 @@ form > input[type=button].upload:hover, button.upload:hover
 	list-style: none;
 	cursor: pointer;
 	line-height: 20px;
+	padding: 3px;
 	
 	-moz-box-sizing: border-box;
 	-webkit-box-sizing: border-box;
@@ -154,10 +156,25 @@ form > input[type=button].upload:hover, button.upload:hover
 	-webkit-box-shadow: 0 0 4px #111;
 	box-shadow: 0 0 4px #111;
 	
+	/** Border top right roundered **/
+	-moz-border-bottom-right-radius: 4px; 
+	-webkit-border-bottom-right-radius: 4px; 
+	border-bottom-right-radius:4px;
+		
+	/** Border top left roundered **/
+	-moz-border-bottom-left-radius: 4px; 
+	-webkit-border-bottom-left-radius: 4px; 
+	border-bottom-left-radius:4px;
+	
 	background-color: white;
 	
 	/* display over logo */
 	z-index: 2;
+}
+
+.localebox .dropDown li
+{
+	font-size:11px;	
 }
 
 .localebox .dropDown li:hover
