--- a/themes/babelium/css/layout.css
+++ b/themes/babelium/css/layout.css
@@ -196,8 +196,9 @@ section#maincontent > #loader
 	section#maincontent > section.exerciseList > article
 	{
 		width: 49%;
-		min-width: 450px;
-		min-height: 130px;
+		min-width: 470px;
+		max-width: 600px;
+		min-height: 140px;
 		float: left;
 		padding-top: 15px;
 		padding-bottom: 10px;
@@ -210,7 +211,7 @@ section#maincontent > #loader
 		
 		section#maincontent > section.exerciseList > article > div
 		{
-			width: 270px;
+			width: 300px;
 			height: 100%;
 		}
 		
@@ -223,6 +224,11 @@ section#maincontent > #loader
 			section#maincontent > section.exerciseList > article > div > p
 			{
 				margin-bottom: 3px;
+			}
+			
+			section#maincontent > section.exerciseList > article > div > *
+			{
+				width: 100%;
 			}
 	
 		section#maincontent > section.exerciseList > article > aside
